WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66180
AccessibilityObject levels are inconsistent
https://bugs.webkit.org/show_bug.cgi?id=66180
Summary
AccessibilityObject levels are inconsistent
Samuel White
Reported
2011-08-12 18:03:02 PDT
Currently, three types of AccessibilityObjects return a level value. That is, AccessibilityObjects that represent headings, blockquotes, or tables can have a level associated with them. At the moment, both the headingLevel and blockquoteLevel functions return 0 only when called on an object of the wrong type which makes 1 the smallest valid level each supports. However, tableLevel returns a value of 0 both when called on non-table AccessibilityObjects AND when called on a table that is not inside any other table. Because some of these level values are not part of any W3C HTML draft and are currently only used by various screen readers I think WebKit should enforce some consistency via additional layout tests so this problem does not grow. This means that tableLevel should be fixed so that it reports a value of 0 only when it is called on a non-table object. Also, this would ensure that these level values remain consistant moving forward and if other levels become useful a central layout test would be available to ensure they too remain consistant.
Attachments
Level patch.
(14.62 KB, patch)
2011-08-17 08:15 PDT
,
Samuel White
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Samuel White
Comment 1
2011-08-17 08:15:07 PDT
Created
attachment 104174
[details]
Level patch. This patch makes the level values returned by AccessibilityObjects consistent and adds a layout test to ensure that they stay that way moving forward.
chris fleizach
Comment 2
2011-08-17 09:22:37 PDT
Comment on
attachment 104174
[details]
Level patch. r=me
WebKit Review Bot
Comment 3
2011-08-17 11:28:15 PDT
Comment on
attachment 104174
[details]
Level patch. Clearing flags on attachment: 104174 Committed
r93226
: <
http://trac.webkit.org/changeset/93226
>
WebKit Review Bot
Comment 4
2011-08-17 11:28:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug