Tools/DumpRenderTree/AccessibilityUIElement.h
@@ -104,6 +104,7 @@ public:
 
     // Attributes - platform-independent implementations
     JSStringRef stringAttributeValue(JSStringRef attribute);
+    double numberAttributeValue(JSStringRef attribute);
     bool boolAttributeValue(JSStringRef attribute);
     bool isAttributeSupported(JSStringRef attribute);
     bool isAttributeSettable(JSStringRef attribute);
