Tools/DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp
@@ -614,6 +614,12 @@ JSStringRef AccessibilityUIElement::stringAttributeValue(JSStringRef attribute)
     return JSStringCreateWithCharacters(0, 0);
 }
 
+double AccessibilityUIElement::numberAttributeValue(JSStringRef attribute)
+{
+    // FIXME: implement
+    return 0.0f;
+}
+
 bool AccessibilityUIElement::boolAttributeValue(JSStringRef attribute)
 {
     // FIXME: implement
